# Y86

./: .gitignore  LICENSE  README.md
Assembler/: Assembler.cabal  Assembler.hs  NanoParsec.hs  Parser.hs  Types.hs
Assembler/app/: Main.hs
Assembler/src/Assembler/: NanoParsec.hs  Parser.hs  Types.hs
Compiler/: Compiler.cabal  LICENSE
Compiler/lab/C/: .gitignore  LexC.hs  ParC.hs  README  ycc.hs
Compiler/lab/C/c/: 0-basic.s  1-test.c  1-test.pp  2-binary-exp.c  2-binary-exp.pp  3-binary-exp-parent.c  3-binary-exp-parent.pp  4-binary-exp-preced.c  4-binary-exp-preced.pp
Compiler/lab/Calc/: .gitignore  Calc.bnfc  LexCalc.hs  ParCalc.hs
SEQ/: SEQ.cabal  Types.hs
SEQ/UART/: FIFO.hs  Rx.hs  Tx.hs  UART.hs
Simulator/: Simulator.cabal  asm  stack.yaml
Simulator/app/: Main.hs
Simulator/src/Simulator/: ISA.hs  RAM.hs  Types.hs  Util.hs
