name:                Compiler
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/aufheben/Compiler#readme
license:             BSD3
license-file:        LICENSE
author:              Yifan Yu
maintainer:          yvifan@gmail.com
copyright:           2016 Yifan Yu
category:            Unknown
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable Compiler-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Compiler
  default-language:    Haskell2010

test-suite Compiler-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Compiler
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/aufheben/Compiler
