name:                Simulator
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/aufheben/Simulator#readme
license:             BSD3
license-file:        LICENSE
author:              Yifan Yu
maintainer:          yvifan@gmail.com
copyright:           2017 Yifan Yu
category:            Unknown
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Simulator.ISA
                     , Simulator.RAM
                     , Simulator.Types
                     , Simulator.Util
  -- -Wall includes -fwarn-tabs, and it also doesn't apply to Main.hs
  ghc-options:         -Wall -fno-warn-missing-signatures
  default-extensions:  RecordWildCards
  build-depends:       base >= 4.7 && < 5
                     , lens
                     , vector
                     , bytestring
                     , cereal
                     , mtl
  default-language:    Haskell2010

executable sim
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , vector
                     , bytestring
                     , Simulator
  default-language:    Haskell2010

test-suite Simulator-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Simulator
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/aufheben/Simulator
